gitops/apps/media/tautulli/templates/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli-http
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tautulli.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: tautulli
          port: 8181
      middlewares:
        - name: redirect-to-https
          namespace: media
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli-https
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: tautulli
          port: 8181
  tls: {}
